Bug: Update test to match changes